[package]
name = "rust-library-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# Allowed us to communicate with any language other than rust-lang
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
base64 = "0.13.0"
image = "=0.23.14"

[dependencies.web-sys]
version = "0.3.4"
features = ["console"]
